<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <!--
                <ImageView android:src="@drawable/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="72dp"
                    android:layout_marginBottom="24dp"
                    android:layout_gravity="center_horizontal" />
            -->
            <TextView
                android:id="@+id/tvRegistrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Registrate"
                android:textStyle="bold"
                android:textSize="20dp"
                android:paddingBottom="@dimen/separacion_horizontal"/>

            <!--  Nombre Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/fNombre" />
            </android.support.design.widget.TextInputLayout>

            <!--  Apellidos Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/separacion_horizontal">
                <EditText android:id="@+id/input_apellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/fApellidos" />
            </android.support.design.widget.TextInputLayout>

            <!--  DNI Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/separacion_horizontal">
                <EditText android:id="@+id/input_dni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number|textCapWords"
                    android:hint="@string/fDni" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <!-- Fecha de Nacimiento -->
                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/in_date"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:hint="@string/fFechaEmision"
                    android:inputType="date"
                    android:enabled="false"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Seleccionar"
                    android:id="@+id/btn_date"
                    android:layout_alignBottom="@+id/in_date"
                    android:layout_toRightOf="@+id/in_date"
                    android:layout_toEndOf="@+id/in_date"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <!-- Dirección Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/separacion_horizontal">
                <EditText android:id="@+id/input_direccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fDireccion" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!-- Fecha de Nacimiento -->
                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/in_date_nacimiento"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:hint="@string/fFechaNacimiento"
                    android:inputType="date"
                    android:enabled="false"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Seleccionar"
                    android:id="@+id/btn_date_nacimiento"
                    android:layout_alignBottom="@+id/in_date_nacimiento"
                    android:layout_toRightOf="@+id/in_date"
                    android:layout_toEndOf="@+id/in_date"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/separacion_horizontal">
                <EditText android:id="@+id/input_celular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Celular"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/separacion_horizontal">
                <EditText android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/fEmail" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/separacion_horizontal">
                <EditText android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/fPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="Regístrame"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>